# taller2-appserver

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile.old  README.md
mongoose/: CMakeLists.txt
mongoose-cpp/: CMakeLists.txt
src/: CMakeLists.txt  DBhandler.cpp  DBhandler.h  Logger.cpp  Logger.h  ResponseHandler.cpp  ResponseHandler.h  ServerController.cpp  ServerController.h  SongsHandler.cpp  SongsHandler.h  Validator.cpp  Validator.h  server.c  server.cpp
src/utils/: base64.h
tests/: CMakeLists.txt  tests.cpp
